<resources>
    <string name="app_name">CafetariaGestion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quantity">Quantity</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="productType">Product Type </string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="populate">populate</string>
    <string name="add">add</string>
    <string name="expirationDate">expiration date</string>
    <string name="Cafet">Cafet</string>
    <string name="productList">Products</string>
    <string name="telephone">telephone</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productsNumber">Number of Product</string>
    <string name="cafetList">Cafet</string>
    <string name="providerList">Provider</string>
    <string name="sellerName">sellerName</string>
    <string name="place">place</string>
    <string name="orderTime">Order time (d)</string>
    <string name="mail">mail</string>
</resources>