<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.product.ProductFragment">

    <data>
        <variable name="changeDate" type="android.view.View.OnClickListener" />
        <variable name="vm" type="fr.ensisa.rados.cafetariagestion.ui.fragment.viewmodel.ProductViewModel" />
        <import type="fr.ensisa.rados.cafetariagestion.model.ProductType"/>
        <import type="fr.ensisa.rados.cafetariagestion.ui.DataBindingAdapters"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@={vm.product.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number"
            android:text="@={vm.product.price}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number"
            android:text="@={vm.product.quantity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/expirationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/expirationDate"
            android:text="@{DataBindingAdapters.format(vm.product.expirationDate)}"
            android:onClick="@{(view) -> changeDate.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity" />


        <RadioGroup
            android:id="@+id/ProductTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expirationDate">

            <TextView
                android:id="@+id/ProductTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/productType" />

            <RadioButton
                android:id="@+id/FoodButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food"
                android:checked="@{vm.product.productType == ProductType.FOOD}"
                android:onClick="@{() -> vm.product.setProductType(ProductType.FOOD)}"/>

            <RadioButton
                android:id="@+id/DrinksButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drinks"
                android:checked="@{vm.product.productType == ProductType.DRINKS}"
                android:onClick="@{() -> vm.product.setProductType(ProductType.DRINKS)}"/>
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>