<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="cafet" type="fr.ensisa.rados.cafetariagestion.model.Cafet"/>
        <import type="fr.ensisa.rados.cafetariagestion.ui.DataBindingAdapters"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">


        <TextView
            android:id="@+id/CafetNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            android:text="@{cafet.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CafetItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/telephone"
            android:text="@{cafet.telephone}"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/CafetNameItem"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/sellerName"
            android:text="@{cafet.sellerName}"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/CafetItemPrice"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!---android:text="@{cafet.productNumber}"-->
</layout>